--- a/src/main/resources/templates/matches.html
+++ b/src/main/resources/templates/matches.html
@@ -13,6 +13,7 @@
             <a class="navbar-brand" href="/">2022 World Cup Gambling App</a>
         </div>
     </nav>
+    <section id="matches" class="row"></section>
     <script src="/wc.js"></script>
 </body>
 </html>
